generated/checkers/refine/KN-Memory-Leak-c8dafb0e-2/build_logs/syntax-repair-refine-1-0/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::calleeMatchesAny(const clang::ento::CallEvent&, llvm::ArrayRef<llvm::StringRef>)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:57:37: warning: ‘bool llvm::StringRef::endswith(llvm::StringRef) const’ is deprecated: Use ends_with instead [-Wdeprecated-declarations]
   57 |           if (StringRef(QN).endswith(N))
      |               ~~~~~~~~~~~~~~~~~~~~~~^~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:278:27: note: declared here
  278 |         "ends_with") bool endswith(StringRef Suffix) const {
      |                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:66:68: error: ‘const class clang::ento::CallEvent’ has no member named ‘getCheckerContext’
   66 |       if (ExprHasName(Origin, N, const_cast<CheckerContext &>(Call.getCheckerContext())))
      |                                                                    ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In constructor ‘{anonymous}::SAGenTestChecker::SAGenTestChecker()’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:95:9: error: ‘class clang::ento::BugType’ has no member named ‘setSuppressOnSink’; did you mean ‘bool clang::ento::BugType::SuppressOnSink’? (accessible via ‘bool clang::ento::BugType::isSuppressOnSink() const’)
   95 |     BT->setSuppressOnSink(true);
      |         ^~~~~~~~~~~~~~~~~
      |         isSuppressOnSink()
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::evalAssume(clang::ento::ProgramStateRef, clang::ento::SVal, bool) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:207:57: error: ‘const class clang::ento::ProgramState’ has no member named ‘getCheckerContext’
  207 |           const StackFrameContext *SFC = getSFC(*State->getCheckerContext());
      |                                                         ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:238:61: error: ‘const class clang::ento::ProgramState’ has no member named ‘getCheckerContext’
  238 |               const StackFrameContext *SFC = getSFC(*State->getCheckerContext());
      |                                                             ^~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
